# resources/views/project_event_log/index.blade.php
@@ -8,14 +8,9 @@
                     <div class="card-header">Логи</div>
                     <div class="card-body">
                         <div class="tools">
-                            <form action="{{route('project_event_log.index')}}">
-                                <select name="sort_by">
-                                    <option {{request()->get('sort_by') == 'id' ? 'selected' : ''}} value="id">ID</option>
-                                    <option {{request()->get('sort_by') == 'project_id' ? 'selected' : ''}} value="project_id">Проект</option>
-                                    <option {{request()->get('sort_by') == 'user_id' ? 'selected' : ''}} value="user_id">Id пользователя</option>
-                                </select>
-                                <button type="submit">Сортировать</button>
-                            </form>
+                            <a href="{{route('project_event_log.index')}}?sort_by=id&sort_direction=asc">Сортировать по Id</a>
+                            <a href="{{route('project_event_log.index')}}?sort_by=project_id&sort_direction=asc">Сортировать по проекту</a>
+                            <a href="{{route('project_event_log.index')}}?sort_by=user_id&sort_direction=asc">Сортировать по пользователю</a>
                         </div>
                         <div class="tools">
                         </div>
@@ -32,16 +27,16 @@
                             <tbody>
                             @foreach ($project_event_logs as $log)
                                 <tr>
-                                    <th scope="row">{{$log->id}}</th>
-                                    <td>{{$log->project->name}}</td>
-                                    <td>{{$log->user_id}}</td>
-                                    <td>{{$log->event_type}}</td>
-                                    <td>{{$log->event_url}}</td>
+                                    <th scope="row">{{$log['id']}}</th>
+                                    <td>{{$log['project']['name']}}</td>
+                                    <td>{{$log['user_id']}}</td>
+                                    <td>{{$log['event_type']}}</td>
+                                    <td>{{$log['event_url']}}</td>
                                 </tr>
                             @endforeach
                             </tbody>
                         </table>
-                        {{$project_event_logs->appends(['sort_by' => request()->get('sort_by')])->links()}}
+                        {{$project_event_logs->links()}}
                     </div>
                 </div>
             </div>
